--- a/prepros.cfg
+++ b/prepros.cfg
@@ -472,19 +472,6 @@
           "height": 0,
           "width": 0
         },
-        "271ad2de": {
-          "id": "271ad2de",
-          "path": "img/conoceme/9.png",
-          "output": "img/conoceme/9.png",
-          "name": "9.png",
-          "category": "IMAGE",
-          "size": 304427,
-          "type": "png",
-          "initialSize": 304427,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "c011419e": {
           "id": "c011419e",
           "path": "img/conoceme/8.jpg",
@@ -676,6 +663,19 @@
           "size": 3445,
           "type": "jpg",
           "initialSize": 3445,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ed42ff71": {
+          "id": "ed42ff71",
+          "path": "img/conoceme/9.jpg",
+          "output": "img/conoceme/9.jpg",
+          "name": "9.jpg",
+          "category": "IMAGE",
+          "size": 34982,
+          "type": "jpg",
+          "initialSize": 34982,
           "optimized": false,
           "height": 0,
           "width": 0
